--- a/JsonChecker.vcxproj
+++ b/JsonChecker.vcxproj
@@ -110,7 +110,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
-      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_WINDOWS;_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -160,7 +160,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
-      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
@@ -187,7 +187,7 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="CodeTransform.h" />
+    <ClInclude Include="..\public\CodeTransform.h" />
     <ClInclude Include="JsonChecker.h" />
     <ClInclude Include="JsonCheckerDlg.h" />
     <ClInclude Include="Resource.h" />
@@ -195,7 +195,7 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="CodeTransform.cpp" />
+    <ClCompile Include="..\public\CodeTransform.cpp" />
     <ClCompile Include="JsonChecker.cpp" />
     <ClCompile Include="JsonCheckerDlg.cpp" />
     <ClCompile Include="stdafx.cpp">
